--- a/index .html
+++ b/index .html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="quiz-container">
-        <h1>Cardiology Descussion (3)</h1>
+        <h1>Cardiology Discussion ( 3 )</h1>
         <div class="timer" id="timer">Time remaining: 60 seconds</div>
 
         <div class="question" id="question-1">
